# dmtestlib

./: CMakeLists.txt  Makefile  README.md
cmake/: Toolchain-mingw32.cmake
src/: CMakeLists.txt  Makefile  dmtestlib.vala  libdmtestlib.pc.in  trv.vala
